View Issue Details

IDProjectCategoryView StatusLast Update
0027532Open CASCADEOCCT:Data Exchangepublic2017-08-15 11:51
ReportermkvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027532: Errors on reading stp-file
DescriptionErrors on reading stp-file
Steps To Reproducebugs modalg_6 bug27341_329
TagsNo tags attached.
Test case numberbugs modalg_6 bug27341_329

Activities

git

2016-06-06 12:23

administrator   ~0054727

Branch CR27532 has been created by ika.

SHA-1: ff9860c359e550f5dfcd3677ac94bec26c4fb17c


Detailed log of new commits:

Author: ika
Date: Mon Jun 6 11:59:06 2016 +0300

    0027532: Errors on reading stp-file
    
    The cause of errors is a non alphabetical order of complex entity, which do not affect export.
    Move messages to debug mode.
    Replace fail by warning.

ika

2016-06-06 12:26

manager   ~0054728

Dear ABV,

could you please review branch CR27532?

abv

2016-06-17 10:12

manager   ~0055121

No remarks, please test

git

2016-06-17 13:45

administrator   ~0055166

Branch CR27532 has been updated forcibly by apv.

SHA-1: 2285ff683d5a9f4b3da7a986473d5a947b48fa78

apv

2016-06-17 13:46

tester   ~0055167

Branch CR27532 has been rebased on the current master

apv

2016-06-20 14:05

tester   ~0055222

Last edited: 2016-06-20 14:06

Dear BugMaster,

Branch CR27532 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 2285ff683d5a9f4b3da7a986473d5a947b48fa78

Number of compiler warnings:
occt component:
   Linux: 0 (0 on master)
   Windows: 0 (0 on master)
   MacOS: 0 (0 on master)
products component:
   Linux: 68
   Windows: 0
   MacOS: 1143

Regressions/Differences:
http://occt-tests/CR27532-master-OCCT/Debian70-64/summary.html
http://occt-tests/CR27532-master-OCCT/Windows-64-VC10/summary.html
bugs vis bug23153

Testing cases:
bugs modalg_6 bug27341_329 - OK
http://occt-tests/CR27532-master-OCCT/Debian70-64/bugs/modalg_6/bug27341_329.html
http://occt-tests/CR27532-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug27341_329.html

Testing on Linux:
Total MEMORY difference: 89242460 / 88920194 [+0.36%]
Total CPU difference: 19414.029999999988 / 19423.269999999968 [-0.05%]

Testing on Windows:
Total MEMORY difference: 55728207 / 55744760 [-0.03%]
Total CPU difference: 18653.959975898775 / 18500.766993898964 [+0.83%]

apv

2016-06-20 14:07

tester   ~0055223

Dear Irina,

Branch CR27532 has been rejected due to:
- regressions/differences/improvements

abv

2016-06-20 14:17

manager   ~0055225

Everything is Ok, just please remove REQUIRED statement from test bugs vis bug23153

git

2016-06-20 17:14

administrator   ~0055248

Branch CR27532 has been updated by apv.

SHA-1: f56a851ace2d27bd336359db704b0244fba764a8


Detailed log of new commits:

Author: apv
Date: Mon Jun 20 17:14:43 2016 +0300

    Correction of test case bugs/vis/bug23153 according to the new behavior

git

2016-06-24 12:57

administrator   ~0055421

Branch CR27532 has been deleted by inv.

SHA-1: f56a851ace2d27bd336359db704b0244fba764a8

Related Changesets

occt: master 5bbe7380

2016-06-06 08:59:06

ika


Committer: bugmaster Details Diff
0027532: Errors on reading stp-file

The cause of errors is a non alphabetical order of complex entity, which do not affect export.
Move messages to debug mode.
Replace fail by warning.

Correction of test case bugs/vis/bug23153 according to the new behavior
Affected Issues
0027532
mod - src/StepData/StepData_StepReaderData.cxx Diff File
mod - tests/bugs/modalg_6/bug27341_329 Diff File
mod - tests/bugs/step/bug2368 Diff File
mod - tests/bugs/step/bug348_1 Diff File
mod - tests/bugs/step/bug348_2 Diff File
mod - tests/bugs/step/bug348_3 Diff File
mod - tests/bugs/step/bug348_4 Diff File
mod - tests/bugs/step/bug926 Diff File
rm - tests/bugs/step/parse.rules Diff File
mod - tests/bugs/vis/bug23153 Diff File
mod - tests/bugs/xde/bug22982 Diff File
mod - tests/de/parse.rules Diff File
mod - tests/xcaf/stp_to_xbf/G7 Diff File
mod - tests/xcaf/stp_to_xbf/I1 Diff File
mod - tests/xcaf/stp_to_xbf/I2 Diff File

Issue History

Date Modified Username Field Change
2016-05-23 19:06 mkv New Issue
2016-05-23 19:06 mkv Assigned To => gka
2016-05-23 19:06 mkv Test case number => bugs modalg_6 bug27341_329
2016-05-31 10:55 abv Assigned To gka => ika
2016-05-31 10:55 abv Status new => assigned
2016-06-06 12:23 git Note Added: 0054727
2016-06-06 12:26 ika Note Added: 0054728
2016-06-06 12:26 ika Assigned To ika => abv
2016-06-06 12:26 ika Status assigned => resolved
2016-06-17 10:12 abv Note Added: 0055121
2016-06-17 10:12 abv Assigned To abv => bugmaster
2016-06-17 10:12 abv Status resolved => reviewed
2016-06-17 13:35 apv Assigned To bugmaster => apv
2016-06-17 13:45 git Note Added: 0055166
2016-06-17 13:46 apv Note Added: 0055167
2016-06-20 14:05 apv Note Added: 0055222
2016-06-20 14:05 apv Assigned To apv => ika
2016-06-20 14:05 apv Status reviewed => assigned
2016-06-20 14:06 apv Note Edited: 0055222
2016-06-20 14:07 apv Note Added: 0055223
2016-06-20 14:17 abv Note Added: 0055225
2016-06-20 14:17 abv Assigned To ika => apv
2016-06-20 14:17 abv Status assigned => feedback
2016-06-20 17:14 git Note Added: 0055248
2016-06-20 17:16 apv Assigned To apv => bugmaster
2016-06-20 17:16 apv Status feedback => tested
2016-06-24 12:41 bugmaster Changeset attached => occt master 5bbe7380
2016-06-24 12:41 bugmaster Status tested => verified
2016-06-24 12:41 bugmaster Resolution open => fixed
2016-06-24 12:57 git Note Added: 0055421
2016-12-09 16:31 aiv Status verified => closed
2016-12-09 16:37 aiv Fixed in Version => 7.1.0